--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"homepage": "https://mdariyan-0.github.io/Product-Site/",
+{"homepage": "https://mdariyan-0.github.io/Product-Site/#",
   "name": "product-site",
   "private": true,
   "version": "0.0.0",
